fixed error icon not aligning properly

--- a/static/css/messages.css
+++ b/static/css/messages.css
@@ -156,8 +156,8 @@
   width: 45px;
   height: 100%;
   position: absolute;
-  top: -1px;
-  left: -1px;
+  top: 0px;
+  left: 0px;
   border: 1px solid #bdbdbd;
 }
 
